Top10_ratings_Output_with_Commands.txt
Microsoft Windows [Version 10.0.19041.450]
(c) 2020 Microsoft Corporation. All rights reserved.

C:\Users\hp>ssh iitp@172.16.27.178
iitp@172.16.27.178's password:
Welcome to Ubuntu 16.04.4 LTS (GNU/Linux 4.15.0-118-generic x86_64)Welcome to Ubuntu 16.04.4 LTS (GNU/Linux 4.15.0-118-generic x86_64)

 * Documentation:  https://help.ubuntu.com
 * Management:     https://landscape.canonical.com
 * Support:        https://ubuntu.com/advantage

152 packages can be updated.
0 updates are security updates.

New release '18.04.5 LTS' available.
Run 'do-release-upgrade' to upgrade to it.

Last login: Sat Oct 10 00:04:04 2020 from 192.168.101.157
iitp@iitp-virtual-machine:~$ ls
altwordcount         docker                      gradlew              prime                          uber123
assig2               docker_assign5              gradlew.bat          Public                         Videos
assign6              docker-example              hadoop-2.6.0         sbt-1.0.0.tgz                  voting
Basement_trips.java  Dockerfile                  hadoop-2.6.0.tar.gz  scala-2.12.6                   vowelword
bike                 docker-hello-world-example  HelloWorld.class     scala-2.12.6.tgz               wordcount
bike123              Documents                   HelloWorld.java      settings.gradle                wordcount-100
bikef                Downloads                   login.sh             spark-2.2.0-bin-hadoop2.6      Youtube
build.gradle         examples.desktop            Music                spark-2.2.0-bin-hadoop2.6.tgz  youtubedata
Desktop              fact-gradle                 Pictures             Templates
iitp@iitp-virtual-machine:~$ cd Youtube
iitp@iitp-virtual-machine:~/Youtube$ ls
inputdata  Top10_views.java       Top5_categories.java       Top5_categories$Reduce.class
T5Cat.jar  Top5_categories.class  Top5_categories$Map.class
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_ratings.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/sbin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/sbin$ ./start-all.sh
This script is Deprecated. Instead use start-dfs.sh and start-yarn.sh
Starting namenodes on [localhost]
iitp@localhost's password:
localhost: namenode running as process 8590. Stop it first.
iitp@localhost's password:
localhost: datanode running as process 8760. Stop it first.
Starting secondary namenodes [0.0.0.0]
iitp@0.0.0.0's password:
0.0.0.0: secondarynamenode running as process 9061. Stop it first.
starting yarn daemons
resourcemanager running as process 9202. Stop it first.
iitp@localhost's password:
localhost: nodemanager running as process 9618. Stop it first.
iitp@iitp-virtual-machine:~/hadoop-2.6.0/sbin$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop fs -mkdir /Youtube
mkdir: `/Youtube': File exists
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop fs -mkdir /Youtube/inputdata
mkdir: `/Youtube/inputdata': File exists
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop dfs -put /home/iitp/Youtube/inputdata/youtubedata.txt /Youtube/inputdata
DEPRECATED: Use of this script to execute hdfs command is deprecated.
Instead use the hdfs command for it.

put: `/Youtube/inputdata/youtubedata.txt': File exists
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ export HADOOP_CLASSPATH=/usr/lib/jvm/java-1.8.0-openjdk-amd64/lib/tools.jar
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_ratings.java
/home/iitp/Youtube/Top10_ratings.java:11: error: '{' expected
   public class Top10_ratings.java
                             ^
1 error
iitp@iitp-virtual-machine:~/Youtube$ 6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_ratings.java
iitp@iitp-virtual-machine:~/Youtube$ :11: error: '{' expected
iitp@iitp-virtual-machine:~/Youtube$
iitp@iitp-virtual-machine:~/Youtube$
iitp@iitp-virtual-machine:~/Youtube$
iitp@iitp-virtual-machine:~/Youtube$ 6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_ratings.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_ratings.java
/home/iitp/Youtube/Top10_ratings.java:59: error: cannot find symbol
           job.setJarByClass(Top10_ratings.java.class);
                                          ^
  symbol:   class java
  location: class Top10_ratings
Note: /home/iitp/Youtube/Top10_ratings.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_ratings.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_ratings.java
Note: /home/iitp/Youtube/Top10_ratings.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ jar cf T10rat.jar Top10_ratings*.class
iitp@iitp-virtual-machine:~/Youtube$ ./hadoop jar /home/iitp/Youtube/T10rat.jar Top10_ratings /Youtube/inputdata/ /Youtube/outputdata1
-bash: ./hadoop: No such file or directory
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop jar /home/iitp/Youtube/T10rat.jar Top10_ratings /Youtube/inputdata/ /Youtube/outputdata1
20/10/10 09:53:39 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032
20/10/10 09:53:40 WARN mapreduce.JobSubmitter: Hadoop command-line option parsing not performed. Implement the Tool interface and execute your application with ToolRunner to remedy this.
20/10/10 09:53:40 INFO input.FileInputFormat: Total input paths to process : 1
20/10/10 09:53:40 INFO mapreduce.JobSubmitter: number of splits:1
20/10/10 09:53:40 INFO mapreduce.JobSubmitter: Submitting tokens for job: job_1602133726714_0007
20/10/10 09:53:40 INFO impl.YarnClientImpl: Submitted application application_1602133726714_0007
20/10/10 09:53:40 INFO mapreduce.Job: The url to track the job: http://iitp-virtual-machine:8088/proxy/application_1602133726714_0007/
20/10/10 09:53:40 INFO mapreduce.Job: Running job: job_1602133726714_0007
20/10/10 09:53:46 INFO mapreduce.Job: Job job_1602133726714_0007 running in uber mode : false
20/10/10 09:53:46 INFO mapreduce.Job:  map 0% reduce 0%
20/10/10 09:53:53 INFO mapreduce.Job:  map 100% reduce 0%
20/10/10 09:53:58 INFO mapreduce.Job:  map 100% reduce 100%
20/10/10 09:53:58 INFO mapreduce.Job: Job job_1602133726714_0007 completed successfully
20/10/10 09:53:58 INFO mapreduce.Job: Counters: 49
        File System Counters
                FILE: Number of bytes read=73806
                FILE: Number of bytes written=359531
                FILE: Number of read operations=0
                FILE: Number of large read operations=0
                FILE: Number of write operations=0
                HDFS: Number of bytes read=965409
                HDFS: Number of bytes written=68494
                HDFS: Number of read operations=6
                HDFS: Number of large read operations=0
                HDFS: Number of write operations=2
        Job Counters
                Launched map tasks=1
                Launched reduce tasks=1
                Data-local map tasks=1
                Total time spent by all maps in occupied slots (ms)=3321
                Total time spent by all reduces in occupied slots (ms)=3228
                Total time spent by all map tasks (ms)=3321
                Total time spent by all reduce tasks (ms)=3228
                Total vcore-seconds taken by all map tasks=3321
                Total vcore-seconds taken by all reduce tasks=3228
                Total megabyte-seconds taken by all map tasks=3400704
                Total megabyte-seconds taken by all reduce tasks=3305472
        Map-Reduce Framework
                Map input records=4100
                Map output records=4100
                Map output bytes=65600
                Map output materialized bytes=73806
                Input split bytes=120
                Combine input records=0
                Combine output records=0
                Reduce input groups=4066
                Reduce shuffle bytes=73806
                Reduce input records=4100
                Reduce output records=4066
                Spilled Records=8200
                Shuffled Maps =1
                Failed Shuffles=0
                Merged Map outputs=1
                GC time elapsed (ms)=86
                CPU time spent (ms)=1160
                Physical memory (bytes) snapshot=325689344
                Virtual memory (bytes) snapshot=3761971200
                Total committed heap usage (bytes)=222429184
        Shuffle Errors
                BAD_ID=0
                CONNECTION=0
                IO_ERROR=0
                WRONG_LENGTH=0
                WRONG_MAP=0
                WRONG_REDUCE=0
        File Input Format Counters
                Bytes Read=965289
        File Output Format Counters
                Bytes Written=68494
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop fs -cat /Youtube/outputdata1/part-r-00000 | sort -n -k2 -r | head -n10
r3Q-2Q3V1jc     4.99
KQweSiiviVQ     4.99
jIuCA4RRtXE     4.99
h_8gsd8IT7Y     4.99
cYbVkXai6Ec     4.99
aoDBacpCX34     4.99
3v1oRJYJl6A     4.99
xe-f-zg_KIU     4.98
U4yJB1ynN-Y     4.98
sWI0yZnnChk     4.98
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$



